--- a/css/mdm.css
+++ b/css/mdm.css
@@ -309,7 +309,7 @@ article p {
       appearance: none;
       border: none;
       background-color: transparent;
-      color: #35a935;
+      color: #4CC4C0;
 }
 
 #content_progress::-webkit-progress-bar {
