--- a/css/mdm.css
+++ b/css/mdm.css
@@ -34,14 +34,14 @@ h6 {
 /*背景*/
 
 body {
-    background: #f5f5f5;
+    background: #FFFFFF;
 }
 
 
 /*bar*/
 
 .mdui-color-indigo {
-    background-color: #3F51B5;
+    background-color: #000000;
 }
 
 
