--- a/css/mdm.css
+++ b/css/mdm.css
@@ -327,7 +327,7 @@ article p {
 /*图片轮播*/
 #container {
 	width: 1920px;
-	height: 1080px;
+	height: 600px;
 	overflow: hidden;
 }
  
@@ -337,9 +337,9 @@ article p {
 }
  
 #photo > img {
-	float: left;
+	float: top;
 	width: 1920px;
-	height: 1080px;
+	height: 600px;
 }
  
 @keyframes switch {
