--- a/css/saoguangs.css
+++ b/css/saoguangs.css
@@ -1,25 +1,23 @@
 .guangshu { display:block; position: relative; width:auto; height:auto; margin:0 auto; overflow:hidden;}
-
 .guangshu:before { content: ""; position: absolute; width:200px; height: 100%; top: 0px; left: -150px; overflow: hidden;
-
 background: -moz-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.5)50%, rgba(255,255,255,0)100%);
-
 background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255,255,255,0)), color-stop(50%, rgba(255,255,255,.2)), color-stop(100%, rgba(255,255,255,0)));
-
 background: -webkit-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.5)50%, rgba(255,255,255,0)100%);
-
 background: -o-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.2)50%, rgba(255,255,255,0)100%);
-
 -webkit-transform: skewX(-25deg);
-
 -moz-transform: skewX(-25deg); animation:mymove 3s infinite; -webkit-animation:mymove 3s infinite; /* Safari and Chrome */
-
 }
 
 .guangshu:active:before { content:""; left: 100%; transition: left 3s ease 0s; }
 
 @keyframes mymove
-
 {
+	from {left:-200px;}
+	to {left:96%;}
+}
 
-	
+@-webkit-keyframes mymove /* Safari and Chrome */
+{
+	from {left:-200px;}
+	to {left:96%;}
+}
